[package]
name = "repoflow-indexer"
version = "0.1.0"
edition = "2021"
description = "On-chain event indexer and REST API for the RepoFlow protocol"
authors = ["RepoFlow Labs"]
license = "MIT"
repository = "https://github.com/repoflow-labs/repoflow-indexer"
homepage = "https://github.com/repoflow-labs/repoflow-indexer"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
octocrab = "0.41"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }